--- a/src/ui-setup/ui-template/package.json
+++ b/src/ui-setup/ui-template/package.json
@@ -10,7 +10,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "wait-for-conductor": "node wait-for-conductor"
+    "wait-for-conductor": "node wait-for-conductor start-ui",
+    "test:wait-for-conductor": "node wait-for-conductor",
+    "test:integration": "REACT_APP_INTEGRATION_TEST=true react-scripts test"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
@@ -36,7 +38,12 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "toml": "^3.0.0",
-    "waait": "^1.0.5"
+    "waait": "^1.0.5",
+    "@holochain/tryorama": "^0.3.0",
+    "faucet": "0.0.1",
+    "json3": "*",
+    "sleep": "^6.1.0",
+    "tape": "^4.9.1"
   },
   "eslintConfig": {
     "extends": "react-app"
