--- a/src/ui-setup/ui-template/package.json
+++ b/src/ui-setup/ui-template/package.json
@@ -8,11 +8,12 @@
     "start-live": "REACT_APP_MOCK_DNA_CONNECTION='false' react-scripts start",
     "start-agent": "PORT=3100 npm run start-live",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "REACT_APP_MOCK_DNA_CONNECTION='true' react-scripts test",
     "eject": "react-scripts eject",
     "wait-for-conductor": "node wait-for-conductor start-ui",
     "test:wait-for-conductor": "node wait-for-conductor",
-    "test:integration": "REACT_APP_INTEGRATION_TEST=true react-scripts test"
+    "test:integration": "REACT_APP_MOCK_DNA_CONNECTION='false' react-scripts test",
+    "test:tryorama-integration": "REACT_APP_MOCK_DNA_CONNECTION='false' node src/utils/integration-testing/tryoramaIntegration"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
