--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "ui:start": "cd ./happ/ui-src && npm run ui:wait-for-conductor start-ui",
     "ui:generate": "node src/ui-setup/scripts/generate-ui",
     "ui:remove": "rm -rf ui-src/*",
-    "hc:clean-storage": "rm -rf ./happ/.holochain/holo/storage",
+    "hc:clean-storage": "rm -rf ./happ/.holochain/holo",
     "hc:config-add-agent": "node src/setup/scripts/add-agent-to-conductor",
     "hc:keygen": "node src/setup/scripts/create-new-agent",
     "hc:generate-conductor": "node src/conductor-setup/generate-conductor",
