--- a/src/happ-template/package.json
+++ b/src/happ-template/package.json
@@ -16,12 +16,12 @@
       "hc:test": "cd dna-src && RUST_BACKTRACE=1 HC_IGNORE_SIM2H_URL_PROPERTY=true hc test | node test/node_modules/faucet/bin/cmd.js",
       "hc:package": "cd dna-src && hc package",
       "hc:build": "npm run hc:package",
-      "hc:stop": "killall holochain",
-      "hc:clean-storage": "rm -rf ./.holochain/holo/storage",
+      "hc:stop": "kill -9 $(ps -ef | grep \"holochain\" | grep -v grep | awk '{print $2}')",
+      "hc:clean-storage": "rm -rf ./.holochain/holo",
       "hc:keygen": "node scripts/create-new-agent",
       "hc:config-add-agent": "node scripts/add-agent-to-conductor",
       "test:wait-for-conductor": "cd ui-src && npm run test:wait-for-conductor",
-      "test:integration": "nix-shell --command 'cd ui-src && npm run test:integration'"    
+      "test:integration": "nix-shell --command 'cd ui-src && npm run test:integration'"
     },
     "devDependencies": {},
     "dependencies": {
@@ -90,4 +90,3 @@
       ]
     }
   }
-  
