sync tests and update the orcastrator

--- a/src/ui-setup/ui-template/package.json
+++ b/src/ui-setup/ui-template/package.json
@@ -12,7 +12,7 @@
     "eject": "react-scripts eject",
     "wait-for-conductor": "node wait-for-conductor start-ui",
     "test:wait-for-conductor": "node wait-for-conductor",
-    "test:integration": "REACT_APP_MOCK_DNA_CONNECTION='false' react-scripts test",
+    "test:integration": "REACT_APP_MOCK_DNA_CONNECTION='false' react-scripts test --runInBand",
     "test:tryorama-integration": "REACT_APP_MOCK_DNA_CONNECTION='false' node src/utils/integration-testing/tryoramaIntegration"
   },
   "dependencies": {
