--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "happ:remove": "npm run hc:clean-storage && rm -rf happ",
     "ui:start": "cd ./happ/ui-src && npm run ui:wait-for-conductor start-ui",
     "ui:generate": "node src/ui-setup/scripts/generate-ui",
-    "ui:remove": "rm -rf ui-src/*",
+    "ui:remove": "rm -rf ./happ/ui-src",
     "hc:clean-storage": "rm -rf ./happ/.holochain/holo",
     "hc:config-add-agent": "node src/setup/scripts/add-agent-to-conductor",
     "hc:keygen": "node src/setup/scripts/create-new-agent",
@@ -22,6 +22,7 @@
     "hc:generate-dna": "node src/dna-setup/scripts/generate-dna",
     "hc:package": "cd ./happ/dna-src && hc package",
     "hc:build": "npm run hc:package",
+    "hc:stop": "kill -9 $(ps -ef | grep \"holochain\" | grep -v grep | awk '{print $2}')",
     "hc:test": "cd ./happ/dna-src && RUST_BACKTRACE=1 HC_IGNORE_SIM2H_URL_PROPERTY=true hc test | node test/node_modules/faucet/bin/cmd.js",
     "hc:start-log": "npm run sim2h:start && cd ./happ && holochain -c conductor-config.toml &> conductor.log &",
     "hc:start": "npm run sim2h:start && cd ./happ && holochain -c conductor-config.toml"
