--- a/src/happ-template/package.json
+++ b/src/happ-template/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "description": "The second tier of RAD tools, automating a UI GraphQL and DNA generation based on a JSON schema file.",
     "scripts": {
-      "start": "npm run start:sim2h && npm run hc:start-log; npm run ui:start",
+      "start": "npm run hc:start-log; npm run ui:start",
       "start:sim2h": "sim2h_server -p 9000 &> sim2h-server.log &",
       "sim2h:clear-local": "kill -9 $(lsof -t -i:9000)",
       "happ:start": "npm run start",
@@ -11,8 +11,8 @@
       "happ:install": "npm i && cd dna-src/test && npm i && cd ../../ui-src && npm i && cd ..",
       "ui:start": "cd ui-src && npm run ui:wait-for-conductor",
       "ui:wait-for-conductor": "cd ui-src && npm run wait-for-conductor",
-      "hc:start-log": "holochain -c conductor-config.toml &> conductor.log &",
-      "hc:start": "holochain -c conductor-config.toml",
+      "hc:start-log": "npm run start:sim2h && holochain -c conductor-config.toml &> conductor.log &",
+      "hc:start": "npm run start:sim2h && holochain -c conductor-config.toml",
       "hc:test": "cd dna-src && RUST_BACKTRACE=1 HC_IGNORE_SIM2H_URL_PROPERTY=true hc test | node test/node_modules/faucet/bin/cmd.js",
       "hc:package": "cd dna-src && hc package",
       "hc:build": "npm run hc:package",
@@ -21,7 +21,7 @@
       "hc:keygen": "node scripts/create-new-agent",
       "hc:config-add-agent": "node scripts/add-agent-to-conductor",
       "test:wait-for-conductor": "cd ui-src && npm run test:wait-for-conductor",
-      "test:integration": "nix-shell --command 'cd ui-src && npm run test:integration'"
+      "test:integration": "cd ui-src && npm run test:integration"
     },
     "devDependencies": {},
     "dependencies": {
