--- a/src/ui-setup/ui-template/package.json
+++ b/src/ui-setup/ui-template/package.json
@@ -7,17 +7,19 @@
     "start-mock": "REACT_APP_MOCK_DNA_CONNECTION='true' react-scripts start",
     "start-live": "REACT_APP_MOCK_DNA_CONNECTION='false' react-scripts start",
     "start-agent": "PORT=3100 npm run start-live",
+    "start:sim2h": "cd ../ && npm run start:sim2h",
     "build": "react-scripts build",
     "test": "REACT_APP_TEST_TYPE='unit' REACT_APP_MOCK_DNA_CONNECTION='true' react-scripts test -t=unit",
     "eject": "react-scripts eject",
     "wait-for-conductor": "node wait-for-conductor start-ui",
     "test:wait-for-conductor": "node wait-for-conductor",
-    "test:integration": "REACT_APP_TEST_TYPE='integration' REACT_APP_MOCK_DNA_CONNECTION='false' react-scripts test --runInBand --testTimeout=15000 -t=integration"
+    "test:integration": "npm run start:sim2h && REACT_APP_TEST_TYPE='integration' REACT_APP_MOCK_DNA_CONNECTION='false' react-scripts test --runInBand --testTimeout=15000 -t=integration"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "@apollo/react-testing": "^3.1.3",
     "@holochain/hc-web-client": "^0.5.3",
+    "@holochain/tryorama": "^0.3.4-dev.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -39,7 +41,6 @@
     "react-scripts": "3.4.0",
     "toml": "^3.0.0",
     "waait": "^1.0.5",
-    "@holochain/tryorama": "^0.3.0",
     "faucet": "0.0.1",
     "json3": "*",
     "sleep": "^6.1.0",
