--- a/src/ui-setup/ui-template/package.json
+++ b/src/ui-setup/ui-template/package.json
@@ -36,6 +36,7 @@
     "net": "^1.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-modal": "^3.11.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
