--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
   "devDependencies": {},
   "dependencies": {
     "chalk": "^4.0.0",
+    "faker": "^4.1.0",
+    "fs-extra": "^9.0.0",
     "lodash": "^4.17.15",
     "ncp": "^2.0.0",
     "toml": "^3.0.0",
-    "util": "^0.12.2",
-    "faker": "^4.1.0"
+    "util": "^0.12.2"
   },
   "repository": {
     "type": "git",
