updated scripts, refit ui:gnerate

--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "sim2h:clear-local": "kill -9 $(lsof -t -i:9000)",
     "happ:start": "npm run start",
     "happ:generate": "src/setup/happ-generate.sh",
-    "happ:install": "npm i && cd happ/dna-src/test && npm i && cd ../../ui-src && npm i && cd ..",
+    "happ:install": "cd ./happ/ui-src && npm i && cd .. && npm i ",
     "happ:refresh": "npm run hc:clean-storage && npm run sim2h:clear-local",
     "happ:remove": "npm run hc:clean-storage && rm -rf happ",
-    "ui:start": "cd ./happ/ui-src && npm run ui:wait-for-conductor start-ui",
+    "ui:start": "cd ./happ/ui-src && npm run wait-for-conductor start-ui",
     "ui:generate": "node src/ui-setup/scripts/generate-ui",
     "ui:remove": "rm -rf ./happ/ui-src",
     "hc:clean-storage": "rm -rf ./happ/.holochain/holo",
