--- a/src/happ-template/package.json
+++ b/src/happ-template/package.json
@@ -8,8 +8,8 @@
       "sim2h:clear-local": "kill -9 $(lsof -t -i:9000)",
       "happ:start": "npm run start",
       "happ:refresh": "npm run hc:clean-storage && npm run sim2h:clear-local",
-      "happ:install": "npm i && cd dna-src/test && npm i && cd ../../ui-src && npm i && cd ..",
-      "ui:start": "cd ui-src && npm run ui:wait-for-conductor",
+      "happ:install": "cd ui-src && npm i && cd .. && npm i ",
+      "ui:start": "cd ui-src && npm run wait-for-conductor",
       "ui:wait-for-conductor": "cd ui-src && npm run wait-for-conductor",
       "hc:start-log": "npm run start:sim2h && holochain -c conductor-config.toml &> conductor.log &",
       "hc:start": "npm run start:sim2h && holochain -c conductor-config.toml",
