--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "happ:install": "cd ./happ/ui-src && npm i && cd .. && npm i ",
     "happ:refresh": "npm run hc:clean-storage && npm run sim2h:clear-local",
     "happ:remove": "npm run hc:clean-storage && rm -rf happ",
-    "ui:start": "cd ./happ/ui-src && npm run wait-for-conductor start-ui",
+    "ui:start": "cd ./happ/ui-src && npm run wait-and-start",
     "ui:test": "cd ./happ/ui-src && npm run test",
+    "ui:test-integration": "cd ./happ/ui-src && npm run test:integration",
     "ui:generate": "node src/ui-setup/scripts/generate-ui",
     "ui:remove": "rm -rf ./happ/ui-src",
     "hc:clean-storage": "rm -rf ./happ/.holochain/holo",
@@ -22,7 +23,7 @@
     "hc:package": "cd ./happ/dna-src && hc package",
     "hc:build": "npm run hc:package",
     "hc:stop": "kill -9 $(ps -ef | grep \"holochain\" | grep -v grep | awk '{print $2}')",
-    "hc:test": "cd ./happ/dna-src && RUST_BACKTRACE=1 HC_IGNORE_SIM2H_URL_PROPERTY=true hc test | node test/node_modules/faucet/bin/cmd.js",
+    "hc:test": "cd ./happ/dna-src && RUST_BACKTRACE=1 hc test | node test/node_modules/faucet/bin/cmd.js",
     "hc:start-log": "npm run sim2h:start && cd ./happ && holochain -c conductor-config.toml &> conductor.log &",
     "hc:start": "npm run sim2h:start && cd ./happ && holochain -c conductor-config.toml"
   },
@@ -31,6 +32,7 @@
     "chalk": "^4.0.0",
     "faker": "^4.1.0",
     "fs-extra": "^9.0.0",
+    "json2toml": "^1.0.6",
     "lodash": "^4.17.15",
     "ncp": "^2.0.0",
     "toml": "^3.0.0",
