--- a/src/ui-setup/ui-template/package.json
+++ b/src/ui-setup/ui-template/package.json
@@ -13,7 +13,7 @@
     "eject": "react-scripts eject",
     "wait-and-start": "node wait-for-conductor-and-start-ui",
     "hc:stop": "kill -9 $(ps -ef | grep \"holochain\" | grep -v grep | awk '{print $2}')",
-    "test:integration": "npm run hc:stop; npm run start:sim2h && TRYORAMA_LOG_LEVEL=0 REACT_APP_TEST_TYPE='integration' REACT_APP_MOCK_DNA_CONNECTION='false' react-scripts test --runInBand --testTimeout=15000"
+    "test:integration": "sh'npm run hc:stop &> /dev/null &'; npm run start:sim2h && TRYORAMA_LOG_LEVEL=0 REACT_APP_TEST_TYPE='integration' REACT_APP_MOCK_DNA_CONNECTION='false' react-scripts test --runInBand --testTimeout=15000"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
@@ -44,7 +44,6 @@
     "waait": "^1.0.5",
     "faucet": "0.0.1",
     "json3": "*",
-    "sleep": "^6.1.0",
     "tape": "^4.9.1"
   },
   "eslintConfig": {
