update package.json name

--- a/src/ui-setup/ui-template/package.json
+++ b/src/ui-setup/ui-template/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "holochain-rad-tools-phase-2-ui",
+  "name": "<HAPP_NAME>-ui",
   "version": "0.1.0",
   "private": true,
   "scripts": {
