--- a/src/happ-template/package.json
+++ b/src/happ-template/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "holochain-rad-tools-phase-2",
+    "name": "<HAPP_NAME>",
     "version": "0.1.0",
     "description": "The second tier of RAD tools, automating a UI GraphQL and DNA generation based on a JSON schema file.",
     "scripts": {
